Item list表示できた

--- a/Src/Frontend/AddItem/add_item.css
+++ b/Src/Frontend/AddItem/add_item.css
@@ -14,12 +14,12 @@ main {
 }
 
 .left {
-    flex: 1;
+    flex: 1 500px;
     display: flex;
 }
 
 .right {
-    flex: 0 1 150px;
+    flex: 0 1 300px;
 }
 
 footer {
