--- a/Src/Frontend/AddItem/add_item.css
+++ b/Src/Frontend/AddItem/add_item.css
@@ -6,6 +6,7 @@
 
 .header {
     flex: 0 0 100px;
+    height: 200px;
 }
 
 main {
@@ -26,3 +27,4 @@ footer {
     flex: 0 0 40px;
     height: 100px;
 }
+
