--- a/Src/Frontend/BuyItem/buy_item_view_style.css
+++ b/Src/Frontend/BuyItem/buy_item_view_style.css
@@ -40,7 +40,7 @@ p.menu_hamburger a {
 	top:25px;
 }
  
-p.menu_hamburger a:before,
+/* p.menu_hamburger a:before,
 p.menu_hamburger a:after {
     content:"";
     display:block;
@@ -64,5 +64,118 @@ p.menu_hamburger a:after {
     top:-webkit-calc(50% - 1px);
     top:-moz-calc(50% - 1px);
     top:calc(50% - 1px);
-    height:0;
+    height:0; */
+}
+
+/*ヘッダーまわりはサイトに合わせて調整してください*/
+header {
+    padding:10px;
+    background: skyblue;
+}
+  
+#nav-drawer {
+position: relative;
+}
+  
+/*チェックボックス等は非表示に*/
+.nav-unshown {
+display:none;
+}
+
+/*アイコンのスペース*/
+#nav-open {
+display: inline-block;
+width: 30px;
+height: 22px;
+vertical-align: middle;
+}
+
+/*ハンバーガーアイコンをCSSだけで表現*/
+#nav-open span, #nav-open span:before, #nav-open span:after {
+position: absolute;
+height: 3px;/*線の太さ*/
+width: 25px;/*長さ*/
+border-radius: 3px;
+background: #555;
+display: block;
+content: '';
+cursor: pointer;
+}
+#nav-open span:before {
+bottom: -8px;
+}
+#nav-open span:after {
+bottom: -16px;
+}
+
+/*閉じる用の薄黒カバー*/
+#nav-close {
+display: none;/*はじめは隠しておく*/
+position: fixed;
+z-index: 99;
+top: 0;/*全体に広がるように*/
+left: 0;
+width: 100%;
+height: 100%;
+background: black;
+opacity: 0;
+transition: .3s ease-in-out;
+}
+  
+/*中身*/
+#nav-content {
+overflow: auto;
+position: fixed;
+top: 0;
+left: 0;
+z-index: 9999;/*最前面に*/
+width: 90%;/*右側に隙間を作る（閉じるカバーを表示）*/
+max-width: 330px;/*最大幅（調整してください）*/
+height: 100%;
+background: #fff;/*背景色*/
+transition: .3s ease-in-out;/*滑らかに表示*/
+-webkit-transform: translateX(-105%);
+transform: translateX(-105%);/*左に隠しておく*/
+}
+
+/*チェックが入ったらもろもろ表示*/
+#nav-input:checked ~ #nav-close {
+display: block;/*カバーを表示*/
+opacity: .5;
+}
+
+  #nav-input:checked ~ #nav-content {
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);/*中身を表示（右へスライド）*/
+    box-shadow: 6px 0 25px rgba(0,0,0,.15);
+  }
+
+
+/*メニューバーの中身*/
+ul {
+	width: 330px;
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+	background-color: #eeeeee;
+}
+li a {
+	display: block;
+	padding: 8px 16px;
+	text-decoration: none;
+	color: #000000;
+}
+li {
+	text-align: center;
+}
+li:last-child {
+	border-bottom: none;
+}
+li a.active {
+	color: #ffffff;
+	background-color: #da3c41;
+}
+li a:hover:not(.active) {
+	color: #ffffff;
+	background-color: #1b2538;
 }
