--- a/Src/Frontend/AddItem/add_item.css
+++ b/Src/Frontend/AddItem/add_item.css
@@ -28,3 +28,143 @@ footer {
     height: 100px;
 }
 
+
+/*表のデザイン*/
+
+table{
+    width: 80%;
+    border-collapse:separate;
+    border-spacing: 0;
+}
+
+table th:first-child{
+    border-radius: 5px 0 0 0;
+}
+
+table th:last-child{
+    border-radius: 0 5px 0 0;
+    border-right: 1px solid #3c6690;
+}
+
+table th{
+    text-align: center;
+    color:white;
+    background: linear-gradient(#829ebc,#225588);
+    border-left: 1px solid #3c6690;
+    border-top: 1px solid #3c6690;
+    border-bottom: 1px solid #3c6690;
+    box-shadow: 0px 1px 1px rgba(255,255,255,0.3) inset;
+    width: 25%;
+    padding: 10px 0;
+    width: auto !important;
+}
+
+table td{
+    text-align: center;
+    border-left: 1px solid #a8b7c5;
+    border-bottom: 1px solid #a8b7c5;
+    border-top:none;
+    box-shadow: 0px -3px 5px 1px #eee inset;
+    width:25%;
+    padding: 10px 0;
+    width: auto !important;
+}
+
+table td:last-child{
+    border-right: 1px solid #a8b7c5;
+}
+
+table tr:last-child td:first-child {
+    border-radius: 0 0 0 5px;
+}
+
+table tr:last-child td:last-child {
+    border-radius: 0 0 5px 0;
+} */
+
+/*メニューバーのデザイン*/
+ul{
+    display: table;
+    margin: 0 auto;
+    padding: 0;
+    width: 80%;
+    text-align: center;
+}
+
+ul li{
+    display: table-cell;
+    min-width: 50px;
+}
+
+ul li a{
+    display: block;
+    width: 100%;
+    padding: 10px 0;
+    text-decoration: none;
+    color: #555;
+    font-weight: bold;
+}
+
+ul li.current{
+    background-color: #DEEBF7;
+}
+
+ul li.current a{
+    color: #555;
+}
+
+ul li:hover{
+    background-color: #FFF2CC;
+}
+
+/*formのデザイン*/
+label#name{
+    width:80px;
+}
+label#price{
+    width:80px;
+}
+label#cost{
+    width:80px;
+}
+label#amount{
+    width:80px;
+}
+
+/* セル幅を自動調整 */
+/* table, th, td {
+    width: auto !important;
+} */
+
+/* thead, tbody {
+    display: block;
+}
+tbody {
+    overflow-y: scroll;
+    height: 150px;
+} */
+
+/* table tr:nth-of-type(1){
+    width: 5%;
+}
+
+
+/* table{
+    width: 80%;
+    border-collapse: collapse;
+    border-spacing: 0;
+    border-collapse: collapse;
+    border:1px solid #333;
+}
+  
+table th,table td{
+    padding: 10px 0;
+    text-align: center;
+    border-collapse: collapse;
+    border:1px solid #333;
+}
+  
+  table tr:nth-child(odd){
+    background-color: #eee
+} */
+
