--- a/Src/Frontend/AddItem/add_item.css
+++ b/Src/Frontend/AddItem/add_item.css
@@ -118,18 +118,18 @@ ul li:hover{
 }
 
 /*formのデザイン*/
-label#name{
+label#name, label#price, label#cost, label#amount{
     width:80px;
+    text-align: center;
+    color:white;
+    background: linear-gradient(#829ebc,#225588);
+    border-left: 1px solid #3c6690;
+    border-top: 1px solid #3c6690;
+    border-bottom: 1px solid #3c6690;
+    box-shadow: 0px 1px 1px rgba(255,255,255,0.3) inset;
 }
-label#price{
-    width:80px;
-}
-label#cost{
-    width:80px;
-}
-label#amount{
-    width:80px;
-}
+
+
 
 /* セル幅を自動調整 */
 /* table, th, td {
