--- a/Src/Frontend/AddItem/add_item.css
+++ b/Src/Frontend/AddItem/add_item.css
@@ -43,17 +43,17 @@ table th:first-child{
 
 table th:last-child{
     border-radius: 0 5px 0 0;
-    border-right: 1px solid #3c6690;
+    border-right: 1px solid #336666;
 }
 
 table th{
     text-align: center;
     color:white;
-    background: linear-gradient(#829ebc,#225588);
-    border-left: 1px solid #3c6690;
-    border-top: 1px solid #3c6690;
-    border-bottom: 1px solid #3c6690;
-    box-shadow: 0px 1px 1px rgba(255,255,255,0.3) inset;
+    background: linear-gradient(#82bc9a,#1b7c5f);
+    border-left: 1px solid #336666;
+    border-top: 1px solid #336666;
+    border-bottom: 1px solid #336666;
+    box-shadow: 0px 1px 1px rgba(50, 139, 88, 0.3) inset;
     width: 25%;
     padding: 10px 0;
     width: auto !important;
@@ -118,19 +118,64 @@ ul li:hover{
 }
 
 /*formのデザイン*/
-label#name, label#price, label#cost, label#amount{
-    width:80px;
+label#name, label#price, label#cost, label#amount {
+    width: 70px;
     text-align: center;
     color:white;
-    background: linear-gradient(#829ebc,#225588);
-    border-left: 1px solid #3c6690;
-    border-top: 1px solid #3c6690;
-    border-bottom: 1px solid #3c6690;
+    background: linear-gradient(#82bcab,#337079);
+    border-left: 1px solid #336666;
+    border-top: 1px solid #336666;
+    border-bottom: 1px solid #336666;
+    box-shadow: 0px 1px 1px rgba(255,255,255,0.3) inset;
+    border-radius: 5px; 
+}
+
+input#submit {
+    width: 70px;
+    text-align: center;
+    color:white;
+    background: linear-gradient(#82bcab,#337079);
+    border-left: 1px solid #336666;
+    border-top: 1px solid #336666;
+    border-bottom: 1px solid #336666;
     box-shadow: 0px 1px 1px rgba(255,255,255,0.3) inset;
 }
 
+/* headerのデザイン */
+header {
+    height: 100px;
+    width: 100%;
+    padding: 15px 0;
+    background-color: #337079;
+    color: white;
+}
+header .headline{
+    line-height: 100px;
+    float: left;
+    font-size: 30px;
+    margin-left: 100px;
+}
+.nav-list {
+    line-height: 100px;
+    float: left;
+    margin-left: 30px;
+    list-style: none;
+}
+.nav-list-item {
+    list-style: none;
+    display: inline-block;
+    margin: 0 20px;
+}
 
+a.navbar-brand {
+    font-weight: 1000;
+    font-size: 30px;
+}
 
+/* コメントの文字サイズ */
+p.comment {
+    font-size: 50;
+}
 /* セル幅を自動調整 */
 /* table, th, td {
     width: auto !important;
