--- a/Src/Frontend/DeleteItem/delete_item.css
+++ b/Src/Frontend/DeleteItem/delete_item.css
@@ -82,3 +82,65 @@ table tr:last-child td:first-child {
 table tr:last-child td:last-child {
     border-radius: 0 0 0 0;
 } */
+
+/*メニューバーのデザイン*/
+ul{
+    display: table;
+    margin: 0 auto;
+    padding: 0;
+    width: 80%;
+    text-align: center;
+}
+
+ul li{
+    display: table-cell;
+    min-width: 50px;
+}
+
+ul li a{
+    display: block;
+    width: 100%;
+    padding: 10px 0;
+    text-decoration: none;
+    color: #555;
+    /*font-weight: bold;*/
+}
+
+ul li.current{
+    background-color: #DEEBF7;
+}
+
+/* ul li.current a{
+    color: #555;
+}        
+ul li:hover{
+    background-color: #FFF2CC;
+} */
+
+/*formのデザイン*/
+label#name, label#price, label#cost, label#amount {
+    width: 80px;
+    height: 27px;
+    text-align: center;
+    color:white;
+    /*(background: linear-gradient(#82bcab,#337079);*/
+    background: #82bcab;
+    /*border-left: 1px solid #336666;
+    border-top: 1px solid #336666;
+    border-bottom: 1px solid #336666;*/
+    /*box-shadow: 0px 1px 1px rgba(255,255,255,0.3) inset;*/
+    border-radius: 5px; 
+}
+
+input#submit {
+    width: 100px;
+    text-align: center;
+    color:white;
+    /*background: linear-gradient(#82bcab,#337079);*/
+    background: #337079;
+    border-left: 0px solid #336666;
+    border-right: 0px solid #336666;
+    border-top: 0px solid #336666;
+    border-bottom: 0px solid #336666;
+    /*box-shadow: 0px 1px 1px rgba(255,255,255,0.3) inset;*/
+}
