--- a/Src/Frontend/BuyItem/buy_item.css
+++ b/Src/Frontend/BuyItem/buy_item.css
@@ -28,3 +28,57 @@ footer {
     height: 100px;
 }
 
+/*表のデザイン*/
+
+table{
+    width: 80%;
+    border-collapse:separate;
+    border-spacing: 0;
+}
+
+table th:first-child{
+    border-radius: 0px 0px 0px 0px;
+}
+
+table th:last-child{
+    border-radius: 0px 0px 0px 0px;
+    border-right: 0px solid #336666;
+}
+
+table th{
+    text-align: center;
+    color:white;
+    font-weight: normal;
+    /*background: linear-gradient(#82bc9a,#1b7c5f);*/
+    background: #82bc9a;
+    border-left: 0px solid #336666;
+    border-top: 0px solid #336666;
+    border-bottom: 0px solid #336666;
+    /*box-shadow: 0px 1px 1px rgba(50, 139, 88, 0.3) inset;*/
+    width: 25%;
+    padding: 10px 0;
+    width: auto !important;
+}
+
+table td{
+    text-align: center;
+    border-left: thin solid #a8b7c5;
+    border-bottom: thin solid #a8b7c5;
+    border-top:none;
+    /*box-shadow: 0px -3px 5px 1px #eee inset;*/
+    width:25%;
+    padding: 10px 0;
+    width: auto !important;
+}
+
+table td:last-child{
+    border-right: 1px solid #a8b7c5;
+}
+
+table tr:last-child td:first-child {
+    border-radius: 0 0 0 0;
+}
+
+table tr:last-child td:last-child {
+    border-radius: 0 0 0 0;
+} 
