--- a/Src/Frontend/BuyItem/buy_item.css
+++ b/Src/Frontend/BuyItem/buy_item.css
@@ -109,3 +109,31 @@ ul li a{
 ul li.current{
     background-color: #DEEBF7;
 }
+
+/*formのデザイン*/
+label#name, label#price, label#cost, label#amount {
+    width: 80px;
+    height: 27px;
+    text-align: center;
+    color:white;
+    /*(background: linear-gradient(#82bcab,#337079);*/
+    background: #82bcab;
+    /*border-left: 1px solid #336666;
+    border-top: 1px solid #336666;
+    border-bottom: 1px solid #336666;*/
+    /*box-shadow: 0px 1px 1px rgba(255,255,255,0.3) inset;*/
+    border-radius: 5px; 
+}
+
+input#submit {
+    width: 100px;
+    text-align: center;
+    color:white;
+    /*background: linear-gradient(#82bcab,#337079);*/
+    background: #337079;
+    border-left: 0px solid #336666;
+    border-right: 0px solid #336666;
+    border-top: 0px solid #336666;
+    border-bottom: 0px solid #336666;
+    /*box-shadow: 0px 1px 1px rgba(255,255,255,0.3) inset;*/
+}
