--- a/Src/Frontend/Order/order.css
+++ b/Src/Frontend/Order/order.css
@@ -24,9 +24,10 @@ main {
 }
 
 footer {
-    flex: 0 0 40px;
-    height: 100px;
+    flex: 0 0 100px;
+    height: 400px;
 }
+
 
 /*表のデザイン*/
 
@@ -81,7 +82,7 @@ table tr:last-child td:first-child {
 
 table tr:last-child td:last-child {
     border-radius: 0 0 0 0;
-}
+} */
 
 /*メニューバーのデザイン*/
 ul{
@@ -109,3 +110,112 @@ ul li a{
 ul li.current{
     background-color: #DEEBF7;
 }
+
+/*ul li.current a{
+    color: #555;
+}*/
+
+/*ul li:hover{
+    background-color: #FFF2CC;
+}*/
+
+/*formのデザイン*/
+label#name, label#price, label#cost, label#amount {
+    width: 80px;
+    height: 27px;
+    text-align: center;
+    color:white;
+    /*(background: linear-gradient(#82bcab,#337079);*/
+    background: #82bcab;
+    /*border-left: 1px solid #336666;
+    border-top: 1px solid #336666;
+    border-bottom: 1px solid #336666;*/
+    /*box-shadow: 0px 1px 1px rgba(255,255,255,0.3) inset;*/
+    border-radius: 5px; 
+}
+
+input#submit {
+    width: 100px;
+    text-align: center;
+    color:white;
+    /*background: linear-gradient(#82bcab,#337079);*/
+    background: #337079;
+    border-left: 0px solid #336666;
+    border-right: 0px solid #336666;
+    border-top: 0px solid #336666;
+    border-bottom: 0px solid #336666;
+    /*box-shadow: 0px 1px 1px rgba(255,255,255,0.3) inset;*/
+}
+
+/* headerのデザイン */
+header {
+    height: 100px;
+    width: 100%;
+    padding: 15px 0;
+    /*background-color: #337079;*/
+    color: white;
+}
+header .headline{
+    line-height: 100px;
+    float: left;
+    font-size: 30px;
+    margin-left: 100px;
+}
+.nav-list {
+    line-height: 100px;
+    float: left;
+    margin-left: 30px;
+    list-style: none;
+}
+.nav-list-item {
+    list-style: none;
+    display: inline-block;
+    margin: 0 20px;
+}
+
+a.navbar-brand {
+    font-weight: 100;
+    font-size: 30px;
+}
+
+/* コメントの文字サイズ */
+p.title {
+    font-weight: lighter;
+    font-size: 20px;
+}
+/* セル幅を自動調整 */
+/* table, th, td {
+    width: auto !important;
+} */
+
+/* thead, tbody {
+    display: block;
+}
+tbody {
+    overflow-y: scroll;
+    height: 150px;
+} */
+
+/* table tr:nth-of-type(1){
+    width: 5%;
+}
+
+
+/* table{
+    width: 80%;
+    border-collapse: collapse;
+    border-spacing: 0;
+    border-collapse: collapse;
+    border:1px solid #333;
+}
+  
+table th,table td{
+    padding: 10px 0;
+    text-align: center;
+    border-collapse: collapse;
+    border:1px solid #333;
+}
+  
+  table tr:nth-child(odd){
+    background-color: #eee
+} */
