--- a/Src/Frontend/BuyItem/buy_item.css
+++ b/Src/Frontend/BuyItem/buy_item.css
@@ -24,8 +24,8 @@ main {
 }
 
 footer {
-    flex: 0 0 40px;
-    height: 100px;
+    flex: 0 0 100px;
+    height: 400px;
 }
 
 
@@ -82,7 +82,7 @@ table tr:last-child td:first-child {
 
 table tr:last-child td:last-child {
     border-radius: 0 0 0 0;
-} 
+} */
 
 /*メニューバーのデザイン*/
 ul{
@@ -111,6 +111,14 @@ ul li.current{
     background-color: #DEEBF7;
 }
 
+/*ul li.current a{
+    color: #555;
+}*/
+
+/*ul li:hover{
+    background-color: #FFF2CC;
+}*/
+
 /*formのデザイン*/
 label#name, label#price, label#cost, label#amount {
     width: 80px;
@@ -127,7 +135,7 @@ label#name, label#price, label#cost, label#amount {
 }
 
 input#submit {
-    width: 150px;
+    width: 100px;
     text-align: center;
     color:white;
     /*background: linear-gradient(#82bcab,#337079);*/
@@ -175,3 +183,39 @@ p.title {
     font-weight: lighter;
     font-size: 20px;
 }
+/* セル幅を自動調整 */
+/* table, th, td {
+    width: auto !important;
+} */
+
+/* thead, tbody {
+    display: block;
+}
+tbody {
+    overflow-y: scroll;
+    height: 150px;
+} */
+
+/* table tr:nth-of-type(1){
+    width: 5%;
+}
+
+
+/* table{
+    width: 80%;
+    border-collapse: collapse;
+    border-spacing: 0;
+    border-collapse: collapse;
+    border:1px solid #333;
+}
+  
+table th,table td{
+    padding: 10px 0;
+    text-align: center;
+    border-collapse: collapse;
+    border:1px solid #333;
+}
+  
+  table tr:nth-child(odd){
+    background-color: #eee
+} */
