--- a/Src/Frontend/DeleteItem/delete_item.css
+++ b/Src/Frontend/DeleteItem/delete_item.css
@@ -3,44 +3,55 @@
     display: flex;
     flex-direction: column;
 }
+
 .header {
     flex: 0 0 100px;
     height: 200px;
 }
+
 main {
     flex: 1;
     display: flex;
 }
+
 .left {
     flex: 1 500px;
     display: flex;
 }
+
 .right {
     flex: 0 1 300px;
 }
+
 footer {
-    flex: 0 0 40px;
-    height: 100px;
+    flex: 0 0 100px;
+    height: 400px;
 }
+
+
 /*表のデザイン*/
+
 table{
     width: 80%;
     border-collapse:separate;
     border-spacing: 0;
 }
+
 table th:first-child{
     border-radius: 0px 0px 0px 0px;
 }
+
 table th:last-child{
     border-radius: 0px 0px 0px 0px;
     border-right: 0px solid #336666;
 }
+
 table th{
     text-align: center;
     color:white;
     font-weight: normal;
-    /*background: linear-gradient(#82BC9A,#1B7C5F);*/
-    background: #82BC9A;
+    /*background: linear-gradient(#82bc9a,#1b7c5f);*/
+    background: #82bc9a;
     border-left: 0px solid #336666;
     border-top: 0px solid #336666;
     border-bottom: 0px solid #336666;
@@ -49,22 +60,163 @@ table th{
     padding: 10px 0;
     width: auto !important;
 }
+
 table td{
     text-align: center;
-    border-left: thin solid #A8B7C5;
-    border-bottom: thin solid #A8B7C5;
+    border-left: thin solid #a8b7c5;
+    border-bottom: thin solid #a8b7c5;
     border-top:none;
     /*box-shadow: 0px -3px 5px 1px #eee inset;*/
     width:25%;
     padding: 10px 0;
     width: auto !important;
 }
+
 table td:last-child{
-    border-right: 1px solid #A8B7C5;
+    border-right: 1px solid #a8b7c5;
 }
+
 table tr:last-child td:first-child {
     border-radius: 0 0 0 0;
 }
+
 table tr:last-child td:last-child {
     border-radius: 0 0 0 0;
+} */
+
+/*メニューバーのデザイン*/
+ul{
+    display: table;
+    margin: 0 auto;
+    padding: 0;
+    width: 80%;
+    text-align: center;
 }
+
+ul li{
+    display: table-cell;
+    min-width: 50px;
+}
+
+ul li a{
+    display: block;
+    width: 100%;
+    padding: 10px 0;
+    text-decoration: none;
+    color: #555;
+    /*font-weight: bold;*/
+}
+
+ul li.current{
+    background-color: #DEEBF7;
+}
+
+/*ul li.current a{
+    color: #555;
+}*/
+
+/*ul li:hover{
+    background-color: #FFF2CC;
+}*/
+
+/*formのデザイン*/
+label#name, label#price, label#cost, label#amount {
+    width: 80px;
+    height: 27px;
+    text-align: center;
+    color:white;
+    /*(background: linear-gradient(#82bcab,#337079);*/
+    background: #82bcab;
+    /*border-left: 1px solid #336666;
+    border-top: 1px solid #336666;
+    border-bottom: 1px solid #336666;*/
+    /*box-shadow: 0px 1px 1px rgba(255,255,255,0.3) inset;*/
+    border-radius: 5px; 
+}
+
+input#submit {
+    width: 100px;
+    text-align: center;
+    color:white;
+    /*background: linear-gradient(#82bcab,#337079);*/
+    background: #337079;
+    border-left: 0px solid #336666;
+    border-right: 0px solid #336666;
+    border-top: 0px solid #336666;
+    border-bottom: 0px solid #336666;
+    /*box-shadow: 0px 1px 1px rgba(255,255,255,0.3) inset;*/
+}
+
+/* headerのデザイン */
+header {
+    height: 100px;
+    width: 100%;
+    padding: 15px 0;
+    /*background-color: #337079;*/
+    color: white;
+}
+header .headline{
+    line-height: 100px;
+    float: left;
+    font-size: 30px;
+    margin-left: 100px;
+}
+.nav-list {
+    line-height: 100px;
+    float: left;
+    margin-left: 30px;
+    list-style: none;
+}
+.nav-list-item {
+    list-style: none;
+    display: inline-block;
+    margin: 0 20px;
+}
+
+a.navbar-brand {
+    font-weight: 100;
+    font-size: 30px;
+}
+
+/* コメントの文字サイズ */
+p.title {
+    font-weight: lighter;
+    font-size: 20px;
+}
+/* セル幅を自動調整 */
+/* table, th, td {
+    width: auto !important;
+} */
+
+/* thead, tbody {
+    display: block;
+}
+tbody {
+    overflow-y: scroll;
+    height: 150px;
+} */
+
+/* table tr:nth-of-type(1){
+    width: 5%;
+}
+
+
+/* table{
+    width: 80%;
+    border-collapse: collapse;
+    border-spacing: 0;
+    border-collapse: collapse;
+    border:1px solid #333;
+}
+  
+table th,table td{
+    padding: 10px 0;
+    text-align: center;
+    border-collapse: collapse;
+    border:1px solid #333;
+}
+  
+  table tr:nth-child(odd){
+    background-color: #eee
+} */
+
