--- a/Src/Frontend/Login/login.css
+++ b/Src/Frontend/Login/login.css
@@ -28,3 +28,33 @@ footer {
     height: 100px;
 }
 
+/* headerのデザイン */
+header {
+    height: 100px;
+    width: 100%;
+    padding: 15px 0;
+    /*background-color: #337079;*/
+    color: white;
+}
+header .headline{
+    line-height: 100px;
+    float: left;
+    font-size: 30px;
+    margin-left: 100px;
+}
+.nav-list {
+    line-height: 100px;
+    float: left;
+    margin-left: 30px;
+    list-style: none;
+}
+.nav-list-item {
+    list-style: none;
+    display: inline-block;
+    margin: 0 20px;
+}
+
+a.navbar-brand {
+    font-weight: 100;
+    font-size: 30px;
+}
