--- a/Src/Frontend/Login/login.css
+++ b/Src/Frontend/Login/login.css
@@ -24,8 +24,127 @@ main {
 }
 
 footer {
-    flex: 0 0 40px;
-    height: 100px;
+    flex: 0 0 100px;
+    height: 400px;
+}
+
+
+/*表のデザイン*/
+
+table{
+    width: 80%;
+    border-collapse:separate;
+    border-spacing: 0;
+}
+
+table th:first-child{
+    border-radius: 0px 0px 0px 0px;
+}
+
+table th:last-child{
+    border-radius: 0px 0px 0px 0px;
+    border-right: 0px solid #336666;
+}
+
+table th{
+    text-align: center;
+    color:white;
+    font-weight: normal;
+    /*background: linear-gradient(#82bc9a,#1b7c5f);*/
+    background: #82bc9a;
+    border-left: 0px solid #336666;
+    border-top: 0px solid #336666;
+    border-bottom: 0px solid #336666;
+    /*box-shadow: 0px 1px 1px rgba(50, 139, 88, 0.3) inset;*/
+    width: 25%;
+    padding: 10px 0;
+    width: auto !important;
+}
+
+table td{
+    text-align: center;
+    border-left: thin solid #a8b7c5;
+    border-bottom: thin solid #a8b7c5;
+    border-top:none;
+    /*box-shadow: 0px -3px 5px 1px #eee inset;*/
+    width:25%;
+    padding: 10px 0;
+    width: auto !important;
+}
+
+table td:last-child{
+    border-right: 1px solid #a8b7c5;
+}
+
+table tr:last-child td:first-child {
+    border-radius: 0 0 0 0;
+}
+
+table tr:last-child td:last-child {
+    border-radius: 0 0 0 0;
+} */
+
+/*メニューバーのデザイン*/
+ul{
+    display: table;
+    margin: 0 auto;
+    padding: 0;
+    width: 80%;
+    text-align: center;
+}
+
+ul li{
+    display: table-cell;
+    min-width: 50px;
+}
+
+ul li a{
+    display: block;
+    width: 100%;
+    padding: 10px 0;
+    text-decoration: none;
+    color: #555;
+    /*font-weight: bold;*/
+}
+
+ul li.current{
+    background-color: #DEEBF7;
+}
+
+/*ul li.current a{
+    color: #555;
+}*/
+
+/*ul li:hover{
+    background-color: #FFF2CC;
+}*/
+
+/*formのデザイン*/
+label#name, label#price, label#cost, label#amount {
+    width: 80px;
+    height: 27px;
+    text-align: center;
+    color:white;
+    /*(background: linear-gradient(#82bcab,#337079);*/
+    background: #82bcab;
+    /*border-left: 1px solid #336666;
+    border-top: 1px solid #336666;
+    border-bottom: 1px solid #336666;*/
+    /*box-shadow: 0px 1px 1px rgba(255,255,255,0.3) inset;*/
+    border-radius: 5px; 
+}
+
+input#submit {
+    width: 100px;
+    text-align: center;
+    color:white;
+    /*background: linear-gradient(#82bcab,#337079);*/
+    background: #337079;
+    border-left: 0px solid #336666;
+    border-right: 0px solid #336666;
+    border-top: 0px solid #336666;
+    border-bottom: 0px solid #336666;
+    /*box-shadow: 0px 1px 1px rgba(255,255,255,0.3) inset;*/
 }
 
 /* headerのデザイン */
@@ -59,30 +178,45 @@ a.navbar-brand {
     font-size: 30px;
 }
 
-
-/*メニューバーのデザイン*/
-ul{
-    display: table;
-    margin: 0 auto;
-    padding: 0;
-    width: 80%;
-    text-align: center;
+/* コメントの文字サイズ */
+p.title {
+    font-weight: lighter;
+    font-size: 20px;
 }
+/* セル幅を自動調整 */
+/* table, th, td {
+    width: auto !important;
+} */
 
-ul li{
-    display: table-cell;
-    min-width: 50px;
-}
-
-ul li a{
+/* thead, tbody {
     display: block;
-    width: 100%;
-    padding: 10px 0;
-    text-decoration: none;
-    color: #555;
-    /*font-weight: bold;*/
+}
+tbody {
+    overflow-y: scroll;
+    height: 150px;
+} */
+
+/* table tr:nth-of-type(1){
+    width: 5%;
 }
 
-ul li.current{
-    background-color: #DEEBF7;
+
+/* table{
+    width: 80%;
+    border-collapse: collapse;
+    border-spacing: 0;
+    border-collapse: collapse;
+    border:1px solid #333;
 }
+  
+table th,table td{
+    padding: 10px 0;
+    text-align: center;
+    border-collapse: collapse;
+    border:1px solid #333;
+}
+  
+  table tr:nth-child(odd){
+    background-color: #eee
+} */
+
